--- a/css/style.css
+++ b/css/style.css
@@ -8,16 +8,13 @@ body {
 
 h1 {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: left;
+  justify-content: left;
   padding: 24px;
   font-family: 'IBM Plex Mono', monospace;
 }
 
 .notecard {
-  
-  align-items: center;
-  justify-content: center;
   border: 3px solid black;
   width: 500px;
   height: 300px;
