--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 h1 {
   display: flex;
   align-items: left;
-  justify-content: left;
+  justify-content: ;
   padding: 24px;
   font-family: 'IBM Plex Mono', monospace;
 }
