--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 body {
   display: flex;
   flex-direction: column;
@@ -59,6 +60,13 @@ h1 {
 
 #message {
   padding: 10px;
+  font-weight: bold;
+}
+
+#game-over {
+  padding: 50px;
+  font-family: 'IBM Plex Mono', monospace;
+  font-size: 16px;
   font-weight: bold;
 }
 
